--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.4"
+    "react-native": "0.69.4",
+    "styled-components": "^5.3.5",
+    "styled-components-react-native": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
